# de_task

./: .gitignore  README.md  main.py  pyproject.toml  pytest.ini  requirements.txt  requirements_dev.txt  setup.cfg  tox.ini
.github/workflows/: launch.yml  main.yml  manual.yml  test.yml
cfg/: config.yaml
src/de_task/: calc_rouitine.py  calc_routine.py  structure.py
src/main/python/: structure.py
src/test/: spark_base.py  test_process.py
