[metadata]
name = de_task
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages = de_task
install_requires =
    pyspark >= 3.1.2
    requests>=2
python_requires = >= 3.6
package_dir=
    =src


[options.extras_require]
testing =
   pytest
   pytest-cov
   mypy
   flake8
   tox

[options.package_data]
de_task = py.typed


[flake8]
max-line-length = 79