[metadata]
name = de_task
description = Data Engineering test task
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages = de_task
install_requires =
    pandas
    requests>=2
python_requires = >= 3.6
package_dir=
    =src
zip_safe=no


[options.extras_require]
testing =
   pytest
   pytest-cov
   mypy
   flake8
   tox

[options.package_data]
de_task = py.typed


[flake8]
max-line-length = 79