[metadata]
name = de_task
description = Data Engineering test task
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3.8

[options]
packages = de_task
install_requires =
    requests>=2
    kaggle
    pyspark
    pyyaml

python_requires = >= 3.8
package_dir=
    =src
zip_safe=no


[options.extras_require]
testing =
   pytest
   pytest-cov
   flake8
   tox

[options.package_data]
de_task = py.typed


[flake8]
max-line-length = 100